# iot_gateway

./: .gitignore  Cargo.toml  LICENSE  build.sh  check_data.js  dfx.json  gateway.js  generate_key.js  package.json  readme.MD  tsconfig.json
container/: Cargo.toml
container/src/: http.rs  http_types.rs  lib.rs  mqtt.did  timedb.rs
container/src/timedb/: action.rs  entry.rs  expression.rs  index.rs  measurement.rs  mod.rs  query.rs  timedb.rs
src/: lib.rs  mqtt.did  service.did.js
src/declarations/storage/: storage.did  storage.did.d.ts  storage.did.js
test/: data_mock.js  docker-compose.yml  init.spec.ts
time_db/: Cargo.toml
time_db/src/: http.rs  http_types.rs  lib.rs  time_db.did
time_db/src/timedb/: action.rs  aggregate.rs  entry.rs  expression.rs  index.rs  measurement.rs  mod.rs  test_helper.rs
