[package]
name = "mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7"
ic-types = "0.7"
candid = "0.9.1"
serde = "1.0.188"

[profile.release]
opt-level="s"
lto = true
codegen-units = 1
