[package]
name = "time_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.7"
ic-types = "0.7"
candid = "0.9.1"
serde = "1.0.188"
serde_bytes = "0.11.12"
serde_json = "1.0.108"
flate2 = "1.0.28"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
opt-level="s"
lto = true
codegen-units = 1
